--- a/index.html
+++ b/index.html
@@ -22,5 +22,27 @@
         <li><a href="#contact">Contact</a></li>
     </ul>
   </header>  
+<section class="home" id="home">
+<div class="home-text">
+    <h1><span>Make</span> Your Comfort <br> Is Our <span>Happiness</span></h1>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Sequi provident nam exercitationem neque quaerat sapiente, <br>similique porro est vitae suscipit facere mollitia. Vero illo odit perspiciatis </p>
+<a href="shop" class="btn">Shop Now</a>
+
+</div>
+</section>
+<!--Shop-->
+<section class="shop" id="shop">
+    <div class="heading">
+        <span>New Arrival</span>
+        <h2>Shop Now</h2>
+    </div>
+</section>
+
+
+
+
+
+
+
 </body>
 </html>
