--- a/index.html
+++ b/index.html
@@ -3,46 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-
-   <link rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <title>Document</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <a href="#" class="logo">Brand <span>X.</span></a>
-    <div class="bx bx-menu" id="menu-icon"></div>
-    <ul class="navbar">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#shop">Shop</a></li>
-        <li><a href="#new">New Arrival</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#brands">Our Partners</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-  </header>  
-<section class="home" id="home">
-<div class="home-text">
-    <h1><span>Make</span> Your Comfort <br> Is Our <span>Happiness</span></h1>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Sequi provident nam exercitationem neque quaerat sapiente, <br>similique porro est vitae suscipit facere mollitia. Vero illo odit perspiciatis </p>
-<a href="shop" class="btn">Shop Now</a>
+    <div id="main">
+        <div id="left">
+<div id="lnav">
+    <i class="ri-arrow-left-line"></i>
+    <div id="lnavr">
+        <a href="">Home</a>
+        <a href="">Work</a>
+        <i class="ri-twitter-fill"></i>
+    </div>
+</div>
+
+<div id="textcenter">
+    <h1>Hello,</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ea vel magnam voluptatibus delectus temporibus dolorem quasi aliquid porro nam, voluptate excepturi voluptatum esse tempora omnis unde aperiam exercitationem vero.</p>
+<a href="#">Read</a>
 
 </div>
-</section>
-<!--Shop-->
-<section class="shop" id="shop">
-    <div class="heading">
-        <span>New Arrival</span>
-        <h2>Shop Now</h2>
+
+        </div>
+        <div id="right">
+            <div id="rtop">
+                <div id="rtopleft"></div>
+                <div id="rtopright"></div>
+            </div>
+            <div id="rbottom"></div>
+        </div>
     </div>
-</section>
-
-
-
-
-
-
-
 </body>
 </html>
