--- a/index.html
+++ b/index.html
@@ -3,40 +3,327 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+
+   <link rel="stylesheet"
+   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <title>Document</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
-        <div id="left">
-<div id="lnav">
-    <i class="ri-arrow-left-line"></i>
-    <div id="lnavr">
-        <a href="">Home</a>
-        <a href="">Work</a>
-        <i class="ri-twitter-fill"></i>
+  <header>
+    <a href="#" class="logo">Brand <span>X.</span></a>
+    <div class="bx bx-menu" id="menu-icon"></div>
+    <ul class="navbar">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#new">New Arrival</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#brands">Our Partners</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+  </header>  
+<section class="home" id="home">
+<div class="home-text">
+    <h1><span>Make</span> Your Comfort <br> Is Our <span>Happiness</span></h1>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br>Sequi provident nam exercitationem neque quaerat sapiente, <br>similique porro est vitae suscipit facere mollitia. Vero illo odit perspiciatis </p>
+<a href="shop" class="btn">Shop Now</a>
+
+</div>
+</section>
+<!--Shop-->
+<section class="shop" id="shop">
+    <div class="heading">
+        <span>New Arrival</span>
+        <h2>Shop Now</h2>
     </div>
-</div>
-
-<div id="textcenter">
-    <h1>Hello,</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ea vel magnam voluptatibus delectus temporibus dolorem quasi aliquid porro nam, voluptate excepturi voluptatum esse tempora omnis unde aperiam exercitationem vero.</p>
-<a href="#">Read</a>
-
-</div>
-
-        </div>
-        <div id="right">
-            <div id="rtop">
-                <div id="rtopleft"></div>
-                <div id="rtopright"></div>
+    <!--Content-->
+    <div class="shop-container">
+        <div class="box">
+            <div class="box-img">
+                <img src="images/img/p1.jpg" alt="">
             </div>
-            <div id="rbottom"></div>
+            <div class="title-price">
+                <h3>Gray Chair</h3>
+                <div class="stars">
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+            </div>
+            <span>46$</span>
+            <i class="bx bx-cart"></i>
+        </div>
+
+        <!--box2-->
+        <div class="box">
+            <div class="box-img">
+                <img src="images/img/p2.jpg" alt="">
+            </div>
+            <div class="title-price">
+                <h3>Gray Chair</h3>
+                <div class="stars">
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star-half"></i>
+                </div>
+            </div>
+            <span>46$</span>
+            <i class="bx bx-cart"></i>
+        </div>
+
+<!--box3-->
+<div class="box">
+    <div class="box-img">
+        <img src="images/img/p3.jpg" alt="">
+    </div>
+    <div class="title-price">
+        <h3>Gray Chair</h3>
+        <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
         </div>
     </div>
+    <span>46$</span>
+    <i class="bx bx-cart"></i>
+</div>
+
+<!--box4-->
+<div class="box">
+    <div class="box-img">
+        <img src="images/img/p4.jpg" alt="">
+    </div>
+    <div class="title-price">
+        <h3>Gray Chair</h3>
+        <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+        </div>
+    </div>
+    <span>46$</span>
+    <i class="bx bx-cart"></i>
+</div>
+
+
+<!--box5-->
+<div class="box">
+    <div class="box-img">
+        <img src="images/img/p5.jpg" alt="">
+    </div>
+    <div class="title-price">
+        <h3>Gray Chair</h3>
+        <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+        </div>
+    </div>
+    <span>46$</span>
+    <i class="bx bx-cart"></i>
+</div>
+<!--box-6-->
+<div class="box">
+    <div class="box-img">
+        <img src="images/img/p6.jpg" alt="">
+    </div>
+    <div class="title-price">
+        <h3>Gray Chair</h3>
+        <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+        </div>
+    </div>
+    <span>46$</span>
+    <i class="bx bx-cart"></i>
+</div>
+
+
+
+    </div>
+</section>
+
+
+<!--Newq arrival -->
+
+<section class="new" id="new">
+    <div class="heading">
+        <span>New Collection</span>
+        <h2>Best sellings</h2>
+    </div>
+<!--conntent-->
+<div class="new-container">
+
+    <!--box1-->
+    <div class="box">
+        <div class="box-img">
+            <img src="images/img/new1.jpg" alt="">
+        </div>
+        <div class="title-price">
+            <h3>Gray Chair</h3>
+            <div class="stars">
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star-half"></i>
+            </div>
+        </div>
+        <span>46$</span>
+        <i class="bx bx-cart"></i>
+    </div>
+
+    <!--box2-->
+    <div class="box">
+        <div class="box-img">
+            <img src="images/img/new2.jpg" alt="">
+        </div>
+        <div class="title-price">
+            <h3>Gray Chair</h3>
+            <div class="stars">
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star-half"></i>
+            </div>
+        </div>
+        <span>46$</span>
+        <i class="bx bx-cart"></i>
+    </div>
+
+    <!--box3-->
+    <div class="box">
+        <div class="box-img">
+            <img src="images/img/new3.jpg" alt="">
+        </div>
+        <div class="title-price">
+            <h3>Gray Chair</h3>
+            <div class="stars">
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star"></i>
+                <i class="bx bxs-star-half"></i>
+            </div>
+        </div>
+        <span>46$</span>
+        <i class="bx bx-cart"></i>
+    </div>
+
+    <!--About-
+    <section class="about" id="about">
+        <div class="about-img">
+<img src="images/img/about.jpg" alt="about">
+        </div>
+
+        <div class="about-text">
+            <span>About Us</span>
+            <h2>Furniture is important part <br> for comfort</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel illo atque assumenda consectetur. Nostrum sequi inventore praesentium, id repellat temporibus eos explicabo. Ipsum voluptatibus vel, porro culpa in beatae quis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel illo atque assumenda consectetur. Nostrum sequi inventore praesentium, id repellat temporibus eos explicabo. Ipsum voluptatibus vel, porro culpa in beatae quis!</p>
+      <a href="#shop" class="btn">Learn More</a>
+        </div>
+    </section>
+
+-->
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="images/img/about.jpg" alt="">
+    </div>
+    <div class="about-text">
+        <span>About Us</span>
+        <h2>Furniture is important part <br> for comfort</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel illo atque assumenda consectetur. Nostrum sequi inventore praesentium, id repellat temporibus eos explicabo. Ipsum voluptatibus vel, porro culpa in beatae quis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel illo atque assumenda consectetur. Nostrum sequi inventore praesentium, id repellat temporibus eos explicabo. Ipsum voluptatibus vel, porro culpa in beatae quis!</p>
+        <a href="#About Us" class="btn">Learn More</a>
+    </div>
+</section>
+
+
+
+</div>
+
+</section>
+<!--Brand-->
+<section class="brands" id="brands">
+    <div class="heading">
+        <span>Brands</span>
+        <h3>Our Brands patterns</h3>
+    </div>
+<div class="brands-container">
+    <img src="images/img/Google.png" alt="">
+    <img src="images/img/amazon.png" alt="">
+    <img src="images/img/netflix.png" alt="">
+    <img src="images/img/tesla.png" alt="">
+    <img src="images/img/starbucks.png" alt="">
+    <img src="images/img/zoom.png" alt="">
+</div>
+
+
+
+    </section>
+
+
+
+    <section class="newsletter" id="contact">
+<h2>Subscribe to Newlater</h2>
+<div class="news-box">
+    <input type="text" placeholder="Enter Your Email..">
+    <a href="#" class="btn">Subscribe</a>
+</div>
+
+    </section>
+
+    <section class="footer" id="footer">
+        <div class="footer-box">
+            <h2>Off <span>Market</span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt amet minus mollitia impedit qui asperiores!</p>
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+            </div>
+        </div>
+        <div class="footer-box">
+            <h3>Services</h3>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">FAQ</a></li>
+        </div>
+        <div class="footer-box">
+            <h3>Product</h3>
+            <li><a href="#">Sofa's</a></li>
+            <li><a href="#">Chair's</a></li>
+            <li><a href="#">Living Room</a></li>
+            <li><a href="#">Office</a></li>
+        </div>
+        <div class="footer-box contact-info">
+            <h3>Contact</h3>
+            <span>Denver, Colorado, USA 10001</span>
+            <span>+1 100 1004 0002</span>
+            <span>brian@OffMarket.com</span>
+        </div>
+    </section>
+
+<div class="copyright">
+    <p>@17,Mohammad Kamruzzaman All Right Reserved</p>
+</div>
+
+
 </body>
 </html>
